--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,3 @@
 {
-  "recommendations": [
-    "tauri-apps.tauri-vscode",
-    "rust-lang.rust-analyzer",
-    "angular.ng-template"
-  ]
+  "recommendations": ["tauri-apps.tauri-vscode", "rust-lang.rust-analyzer", "angular.ng-template"]
 }
