--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "format": "prettier --write ."
   },
   "private": true,
   "dependencies": {
@@ -30,12 +31,19 @@
     "@angular/compiler-cli": "^19.1.3",
     "@tauri-apps/cli": "^2",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "^19.0.2",
+    "eslint": "9.14.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.7.3"
+    "prettier": "^3.4.2",
+    "prettier-eslint": "^16.3.0",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.22.0"
   }
 }
