--- a/angular.json
+++ b/angular.json
@@ -1,67 +1,72 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "cli": {
-    "analytics": false
-  },
-  "projects": {
-    "dance-deck": {
-      "projectType": "application",
-      "root": "",
-      "sourceRoot": "src",
-      "prefix": "app",
-      "architect": {
-        "build": {
-          "builder": "@angular/build:application",
-          "options": {
-            "outputPath": "dist/dance-deck",
-            "index": "src/index.html",
-            "browser": "src/main.ts",
-            "polyfills": ["zone.js"],
-            "tsConfig": "tsconfig.app.json",
-            "assets": ["src/assets"]
-          },
-          "configurations": {
-            "production": {
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "projects",
+    "cli": {
+        "analytics": false
+    },
+    "projects": {
+        "dance-deck": {
+            "projectType": "application",
+            "root": "",
+            "sourceRoot": "src",
+            "prefix": "app",
+            "architect": {
+                "build": {
+                    "builder": "@angular/build:application",
+                    "options": {
+                        "outputPath": "dist/dance-deck",
+                        "index": "src/index.html",
+                        "browser": "src/main.ts",
+                        "styles": [
+                            "src/styles.css"
+                        ],
+                        "polyfills": [],
+                        "tsConfig": "tsconfig.app.json",
+                        "assets": [
+                            "src/assets"
+                        ]
+                    },
+                    "configurations": {
+                        "production": {
+                            "budgets": [
+                                {
+                                    "type": "initial",
+                                    "maximumWarning": "500kb",
+                                    "maximumError": "1mb"
+                                },
+                                {
+                                    "type": "anyComponentStyle",
+                                    "maximumWarning": "2kb",
+                                    "maximumError": "4kb"
+                                }
+                            ],
+                            "outputHashing": "all"
+                        },
+                        "development": {
+                            "optimization": false,
+                            "extractLicenses": false,
+                            "sourceMap": true
+                        }
+                    },
+                    "defaultConfiguration": "production"
                 },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                "serve": {
+                    "builder": "@angular/build:dev-server",
+                    "options": {
+                        "port": 1420
+                    },
+                    "configurations": {
+                        "production": {
+                            "buildTarget": "dance-deck:build:production"
+                        },
+                        "development": {
+                            "buildTarget": "dance-deck:build:development"
+                        }
+                    },
+                    "defaultConfiguration": "development"
                 }
-              ],
-              "outputHashing": "all"
-            },
-            "development": {
-              "optimization": false,
-              "extractLicenses": false,
-              "sourceMap": true
             }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular/build:dev-server",
-          "options": {
-            "port": 1420
-          },
-          "configurations": {
-            "production": {
-              "buildTarget": "dance-deck:build:production"
-            },
-            "development": {
-              "buildTarget": "dance-deck:build:development"
-            }
-          },
-          "defaultConfiguration": "development"
         }
-      }
     }
-  }
 }
