--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
         "@angular/platform-browser": "^19.1.3",
         "@angular/platform-browser-dynamic": "^19.1.3",
         "@angular/router": "^19.1.3",
-        "rxjs": "~7.8.0",
-        "tslib": "^2.3.0",
+        "@tailwindcss/postcss": "^4.0.0",
         "@tauri-apps/api": "^2",
-        "@tauri-apps/plugin-opener": "^2"
+        "@tauri-apps/plugin-opener": "^2",
+        "postcss": "^8.5.1",
+        "rxjs": "~7.8.0",
+        "tailwindcss": "^4.0.0",
+        "tslib": "^2.3.0"
     },
     "devDependencies": {
         "@angular/build": "^19.1.4",
