--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
         "tauri": "tauri",
-        "format": "prettier --write ."
+        "format": "prettier --write ./src",
+        "lint": "eslint ./src"
     },
     "private": true,
     "dependencies": {
