--- a/package.json
+++ b/package.json
@@ -1,45 +1,48 @@
 {
-    "name": "dance-deck",
-    "version": "0.1.0",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve",
-        "build": "ng build",
-        "watch": "ng build --watch --configuration development",
-        "tauri": "tauri",
-        "format": "prettier --write ./src",
-        "lint": "eslint ./src"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^19.1.3",
-        "@angular/common": "^19.1.3",
-        "@angular/compiler": "^19.1.3",
-        "@angular/core": "^19.1.3",
-        "@angular/forms": "^19.1.3",
-        "@angular/platform-browser": "^19.1.3",
-        "@angular/platform-browser-dynamic": "^19.1.3",
-        "@angular/router": "^19.1.3",
-        "@tailwindcss/postcss": "^4.0.0",
-        "@tauri-apps/api": "^2",
-        "@tauri-apps/plugin-opener": "^2",
-        "postcss": "^8.5.1",
-        "rxjs": "~7.8.0",
-        "tailwindcss": "^4.0.0",
-        "tslib": "^2.3.0"
-    },
-    "devDependencies": {
-        "@angular/build": "^19.1.4",
-        "@angular/cli": "^19.1.4",
-        "@angular/compiler-cli": "^19.1.3",
-        "@tauri-apps/cli": "^2",
-        "angular-eslint": "^19.0.2",
-        "eslint": "9.14.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-prettier": "^5.2.3",
-        "prettier": "^3.4.2",
-        "prettier-eslint": "^16.3.0",
-        "typescript": "~5.7.3",
-        "typescript-eslint": "^8.22.0"
-    }
+  "name": "dance-deck",
+  "version": "0.1.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "tauri": "tauri",
+    "format": "prettier --write ./src",
+    "lint": "eslint ./src"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^19.1.3",
+    "@angular/common": "^19.1.3",
+    "@angular/compiler": "^19.1.3",
+    "@angular/core": "^19.1.3",
+    "@angular/forms": "^19.1.3",
+    "@angular/platform-browser": "^19.1.3",
+    "@angular/platform-browser-dynamic": "^19.1.3",
+    "@angular/router": "^19.1.3",
+    "@tailwindcss/postcss": "^4.0.0",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-opener": "^2",
+    "postcss": "^8.5.1",
+    "rxjs": "~7.8.0",
+    "tailwindcss": "^4.0.0",
+    "tslib": "^2.3.0"
+  },
+  "devDependencies": {
+    "@angular/build": "^19.1.4",
+    "@angular/cli": "^19.1.4",
+    "@angular/compiler-cli": "^19.1.3",
+    "@tauri-apps/cli": "^2",
+    "angular-eslint": "^19.0.2",
+    "eslint": "9.14.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "prettier": "^3.4.2",
+    "prettier-eslint": "^16.3.0",
+    "typescript": "~5.7.3",
+    "typescript-eslint": "^8.22.0"
+  },
+  "trustedDependencies": [
+    "@parcel/watcher"
+  ]
 }
