--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,10 +18,10 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
+diesel = { version = "2.2.6", features = ["sqlite"] }
+dotenvy = "0.15.7"
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 thiserror = "2.0.11"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-rusqlite = { version = "0.33.0", features = ["bundled"] }
-
