--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,7 +19,7 @@ tauri-build = { version = "2", features = [] }
 
 [dependencies]
 diesel = { version = "2.2.6", features = ["sqlite"] }
-dotenvy = "0.15.7"
+diesel_migrations = "2.2.0"
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 thiserror = "2.0.11"
