--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -26,3 +26,5 @@ thiserror = "2.0.11"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-dialog = "2"
+rodio = { version = "0.20.1", default-features = false, features = ["symphonia-all"] }
+id3 = "1.16.1"
