--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "tauri": "tauri",
     "format": "prettier --write ./src",
-    "lint": "eslint ./src"
+    "lint:check": "eslint ./src",
+    "lint:fix": "eslint --fix ./src"
   },
   "private": true,
   "dependencies": {
@@ -31,13 +32,18 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-eslint/eslint-plugin": "^19.2.0",
+    "@angular-eslint/template-parser": "^19.2.0",
     "@angular/build": "^19.1.4",
     "@angular/cli": "^19.1.4",
     "@angular/compiler-cli": "^19.1.3",
     "@tauri-apps/cli": "^2",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
     "angular-eslint": "^19.0.2",
     "eslint": "9.14.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.4.2",
     "prettier-eslint": "^16.3.0",
