--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -14,10 +14,10 @@ tauri-build = { version = "2.0.6", features = [] }
 
 [dependencies]
 diesel = { version = "2.2.8", features = ["sqlite"] }
+diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 tauri = { version = "2.3.1", features = [] }
 tauri-plugin-dialog = { version = "2.2.0", features = [] }
 tauri-plugin-opener = { version = "2.2.6", features = [] }
 thiserror = { version = "2.0.12", features = [] }
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = { version = "1.0.140", features = [] }
-refinery = { version = "0.8.16", features = ["rusqlite"] }
