--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-opener": "^2",
     "postcss": "^8.5.1",
+    "rxjs": "^7.8.2",
     "tailwindcss": "^4.0.0",
     "tslib": "^2.3.0"
   },
