--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
+    "@tauri-apps/plugin-log": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2",
     "postcss": "^8.5.1",
     "rxjs": "^7.8.2",
