--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@angular/router": "^19.1.3",
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@ngrx/signals": "^19.0.1",
     "@tailwindcss/postcss": "^4.0.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2.2.0",
     "@tauri-apps/plugin-log": "^2.3.0",
     "@tauri-apps/plugin-opener": "^2",
     "postcss": "^8.5.1",
-    "rxjs": "^7.8.2",
     "tailwindcss": "^4.0.0",
     "tslib": "^2.3.0"
   },
