--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,8 @@ thiserror = { version = "2.0.12", features = [] }
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = { version = "1.0.140", features = [] }
 tauri-plugin-prevent-default = { version = "1.2.1", features = ["unstable-windows"] }
+toml = { version = "0.8.20", features = [] }
+log = "0.4.26"
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
 tauri-plugin-single-instance = "2"
