--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,13 +18,14 @@ diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
 tauri = { version = "2.3.1", features = [] }
 tauri-plugin-dialog = { version = "2.2.0", features = [] }
 tauri-plugin-log = { version = "2.3.0", features = ["colored"] }
-tauri-plugin-opener = { version = "2.2.6", features = [] }
 thiserror = { version = "2.0.12", features = [] }
 serde = { version = "1.0.218", features = ["derive"] }
 serde_json = { version = "1.0.140", features = [] }
 tauri-plugin-prevent-default = { version = "1.2.1", features = ["unstable-windows"] }
 toml = { version = "0.8.20", features = [] }
-log = "0.4.26"
+log = { version = "0.4.26", features = [] }
+symphonia = { version = "0.5.4", features = ["all-codecs", "all-formats", "opt-simd"] }
+symphonia-metadata = { version = "0.5.4", features = [] }
 
 [target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
-tauri-plugin-single-instance = "2"
+tauri-plugin-single-instance = { version = "2.2.2", features = [] }
